fix gap and color

--- a/css/my.css
+++ b/css/my.css
@@ -7,7 +7,7 @@
 	text-align:center;
 	border-radius:0;
 	padding-top:25px;
-	padding-bottom:25px;
+	padding-bottom:20px;
 	background-image:-webkit-linear-gradient(left, #003973 0, #e5e5be 100%);
 	background-image:-o-linear-gradient(left, #003973 0, #e5e5be 100%);
 	background-image:linear-gradient(to right, #003973 0, #e5e5be 100%);
@@ -16,10 +16,14 @@
 }
 
 .jumbotron h1{
-  margin-bottom:12px;
+  margin-bottom:8px;
   font-weight:300;
   letter-spacing:-0.3px;
   color:#fff
+}
+
+.jumbotron p{
+  margin-bottom: 0.3em;
 }
 
 footer{
@@ -29,9 +33,9 @@ footer{
 	text-align:center;
 	opacity:.8;
 	padding:50px;
-	background-image:-webkit-linear-gradient(left, #003973 0, #e5e5be 100%);
-	background-image:-o-linear-gradient(left, #003973 0, #e5e5be 100%);
-	background-image:linear-gradient(to right, #003973 0, #e5e5be 100%);
+	background-image:-webkit-linear-gradient(left, #e5e5be 0, #003973 100%);
+	background-image:-o-linear-gradient(left, #e5e5be 0, #003973 100%);
+	background-image:linear-gradient(to right, #e5e5be 0, #003973 100%);
 	background-repeat:repeat-x;
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff003973', endColorstr='#ffe5e5be', GradientType=1)
 }
@@ -61,9 +65,8 @@ footer{
 }
 
 .fa-github {
-  margin: 0 0 0;
   color: #00cdcd;
-  font-size: 1.9em;
+  font-size: 2.0em;
   transition: .3s ease-in-out;
 }
 
@@ -72,9 +75,8 @@ footer{
 }
 
 .fa-file {
-  margin: 0 0 0;
   color: #00cdcd;
-  font-size: 1.9em;
+  font-size: 2.0em;
   transition: .3s ease-in-out;
 }
 
@@ -83,9 +85,8 @@ footer{
 }
 
 .fa-envelope {
-  margin: 0 0 0;
   color: #00cdcd;
-  font-size: 1.9em;
+  font-size: 2.0em;
   transition: .3s ease-in-out;
 }
 
@@ -112,6 +113,7 @@ footer{
   font-weight: 300;
   line-height: 1;
   letter-spacing: -.05rem;
+  color: #a52a2a;
 }
 
 @media (min-width: 40em) {
